# intelligent_drone_swarm

./: .gitignore  README.md  mp_clean.sh  mp_udpate.sh  mp_update.sh  pyproject.toml  requirements.txt  update_mp.sh
.github/ISSUE_TEMPLATE/: feature_request.md
config/: .env.template  .template.env
data/notebooks/: 01-Thrust.ipynb
docs/bitcraze-examples/: flowsequence.py  swarm.py
scripts/: reset_uvc_camera.sh  test_camera.py
src/: capture_video.py  command.py  command_helper.py  command_packet.py  detector.py  drone.py  drone_connection.py  drone_connections.py  drone_connections_swarm.py  drone_log.py  drone_log_plot.py  drone_logs.py  esp_drone.py  esp_drone_udp.py  esp_multidrone_udp.py  esp_now.py  flow.py  flow_swarm.py  main.py  pid.csv  pid_controller.py  pid_watchdog.py  swarm_command.py  test.py  test_swarm.py  toc_handler.py  udp_connection.py  vision.py
src/old/: command.py  command_packet.py  esp_drone_udp.py  main.py
src/utils/: aruco_generate_board.py  charuco_calibrate.py  charuco_create.py  context.py  helpers.py  logger.py
src/utils/bash/: cam_settings_dump.sh
src/vision/: detector.py
webapp/: index.html  index.php  styles.css
